style.css
/*
html5doctor.com Reset Stylesheet
v1.6.1
Last Updated: 2010-09-17
Author: Richard Clark - http://richclarkdesign.com
Twitter: @rich_clark
*/

html, body, div, span, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
abbr, address, cite, code,
del, dfn, em, img, ins, kbd, q, samp,
small, strong, sub, sup, var,
b, i,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, figcaption, figure,
footer, header, hgroup, menu, nav, section, summary,
time, mark, audio, video {
    margin:0;
    padding:0;
    border:0;
    outline:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

body {
    line-height:1;
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section {
    display:block;
}

ul {
    list-style: none;
}

blockquote, q {
    quotes:none;
}

blockquote:before, blockquote:after,
q:before, q:after {
    content:'';
    content:none;
}

a {
    color: inherit;
    text-decoration: none;
    margin:0;
    padding:0;
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

/* change colours to suit your needs */
ins {
    background-color:#ff9;
    color:#000;
    text-decoration:none;
}

/* change colours to suit your needs */
mark {
    background-color:#ff9;
    color:#000;
    font-style:italic;
    font-weight:bold;
}

del {
    text-decoration: line-through;
}

abbr[title], dfn[title] {
    border-bottom:1px dotted;
    cursor:help;
}

table {
    border-collapse:collapse;
    border-spacing:0;
}

/* change border colour to suit your needs */
hr {
    display:block;
    height:1px;
    border:0;  
    border-top:1px solid #cccccc;
    margin:1em 0;
    padding:0;
}

input, select {
    vertical-align:middle;
}
/*//////////////////////////////////////////////////////////////////////////*/
/* my styling*/
/*Custom properties*/








:root {
    --strong_font_color: #202124;
    --light_font_color: #70757a;
    --border_color: #dadce0;
    --light_background_color: #f8f9fa;
    --footer_border_color: #dadce0;
    --footer_font_color: rgba(0,0,0,.54);
}
/*footer support + basic styling.*/

html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 10px;
    color: var(--light_font_color, green);
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction:column;
    box-sizing: border-box;
}

nav {
    padding: 15px;
}

#navigation {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.nav-item {
    margin: auto 10px;
}

 nav a {
    font-size: 12px;
    text-decoration: none;
    color: var(--light_font_color, green);
}

main {
    flex-grow: 1;
    margin-top: 90px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#logo {
    width: 60%;
    max-width: 370px;
}

#search-bar {
    width: 60%;
    max-width: 450px;
    padding: 12px 30px;
    margin-top: 10px;
    border: 1px solid var(--footer_border_color);;
    border-radius: 20px;
    outline: none;
    margin-bottom: 20px;

}


#search-bar:hover, button:hover {
    box-shadow: rgba(0, 0, 0, 0.15) 0 1px 2.6px;
}
button:hover {
    /*This part is from an external source and not my knowledge.*/
    box-shadow:0px 0px 0px 1px rgba(0, 0, 0, 0.15) inset, rgba(0, 0, 0, 0.15) 0 1px 2.6px;
}
button {
    font-size: 1.4em;
    color: var(--strong_font_color, green);
    padding: 7px 15px;
    background-color: var(--light_background_color,green);;
    border: none;
    border-radius: 2px;
    cursor: pointer;
}

footer {
    padding: 15px 0;
    background-color: var(--light_background_color);
}

#top-footer, #bottom-footer {
    font-size: 1.4em;
    color: var(--footer_font_color, green);
    background-color: var(--light_background_color, green);
}

#top-footer {
    padding: 0 15px;
}
#top-footer {
    padding-bottom: 15px;
    border-bottom: 1px solid var(--footer_border_color);
}

#bottom-footer {
    padding-top: 15px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

#right-footer, #left-footer {
    display: flex;
    flex-wrap: wrap;
    margin: auto;
}

#right-footer {
    justify-content: flex-start;
}

#left-footer {
    justify-content: flex-end;
}

